--- a/config.h.in
+++ b/config.h.in
@@ -98,3 +98,7 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
+
+/* Define if you have a big-endian architecture. */
+#undef WORDS_BIGENDIAN
+
